--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Editor</title>
+    <link rel="icon" type="image/png" href="https://bytegrad.com/course-assets/css/1/favicon.png">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     
