--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 			<span class="dd-toggle__text">James O.</span>
 		</button>
 	</header>
+
+	<div class="app__container">
+
+		<div class="sidebar"></div>
+		
+		<section class="panel"></section>
+
+		<main class="main"></main>
+	</div>
+
 </body>
 
 </html>
