--- a/index.html
+++ b/index.html
@@ -37,7 +37,29 @@
 
 	<div class="app__container">
 
-		<div class="sidebar"></div>
+		<div class="sidebar">
+			<section class="menu">
+				<button class="menu__button menu__button--active">
+					<i class="fas fa-layer-group menu__icon"></i>
+					<span class="menu__text">Images</span>
+				</button>
+
+				<button class="menu__button">
+					<i class="fas fa-image menu__icon"></i>
+					<span class="menu__text">Template</span>
+				</button>
+
+				<button class="menu__button">
+					<i class="fas fa-font menu__icon"></i>
+					<span class="menu__text">Text/Font</span>
+				</button>
+
+				<button class="menu__button">
+					<i class="fas fa-shapes menu__icon"></i>
+					<span class="menu__text">Shapes</span>
+				</button>
+			</section>
+		</div>
 		
 		<section class="panel"></section>
 
