Refactor CSS styles, add fade-in animation to logo, and update index.html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 					<span class="menu__text">Shapes</span>
 				</button>
 			</section>
+
+			<footer class="footer">
+				<small class="copyright">&copy; SocialEditor</small>
+			</footer>
 		</div>
 		
 		<section class="panel"></section>
