--- a/index.html
+++ b/index.html
@@ -99,7 +99,16 @@
 			</div>
 		</section>
 
-		<main class="main"></main>
+		<main class="main">
+			<div class="info-bar">
+				<section class="breadcrumbs">
+					<a href="#" class="breadcrumbs__link">Facebook posts</a>
+					<i class="fas fa-angle-right breadcrumbs__icon"></i>
+					<span class="breadcrumbs__name">Happy-hour-friday</span>
+				</section>
+				<button class="button">Publisher</button>
+			</div>
+		</main>
 	</div>
 
 </body>
