Refactor CSS styles, add fade-in animation to logo, update index.html, and add info bar with breadcrumbs and publisher button

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<div class="canvas__circle"></div>
 				</section>
 				<section class="tools">
-					<button class="tool">
+					<button class="tool tool--active">
 						<i class="fas fa-crop-alt tool__icon"></i>
 					</button>
 
